added app.js for routes model.js and jquery

--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -10,3 +10,24 @@ nav a {
   text-decoration: none;
   color: #fff;
 }
+
+.menu-outline {
+  color: white;
+  font-size: 32px;
+}
+
+/** Mobile **/
+@media only screen and (max-width: 767px),
+  only screen and (max-device-width: 767px) {
+  nav a {
+    display: none;
+  }
+}
+
+/** Tablet **/
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+}
+
+/** Tablet (landscape) **/
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+}
