--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,17 @@ nav a {
   text-decoration: none;
   color: #fff;
 }
+
+.menu-outline {
+  color: white;
+  font-size: 32px;
+}
+
+/** Mobile **/
+@media only screen and (max-width: 767px), only screen and (max-device-width: 767px) {
+  nav a {
+    display: none;
+  }
+}
+/** Tablet **/
+/** Tablet (landscape) **/
