--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,10 @@ nav {
   background-color: #000;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding: 0 10px;
+  text-align: center;
+  position: relative;
 }
 
 nav a {
@@ -11,16 +14,75 @@ nav a {
   color: #fff;
 }
 
-.menu-outline {
-  color: white;
-  font-size: 32px;
+#menu-icon {
+  cursor: pointer;
 }
 
-/** Mobile **/
-@media only screen and (max-width: 767px), only screen and (max-device-width: 767px) {
-  nav a {
+#menu-toggle {
+  display: none;
+}
+
+#nav-links {
+  display: flex;
+  gap: 15px;
+}
+
+/* Mobile view */
+@media only screen and (max-width: 430px) {
+  #nav-links {
     display: none;
+    flex-direction: column;
+    background-color: #000;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    left: 0;
+  }
+  #menu-toggle:checked + #menu-icon + #nav-links {
+    display: block;
+  }
+  nav a {
+    display: block;
+    padding: 10px 0;
+  }
+  #menu-icon {
+    font-size: 32px;
+    color: white;
+    display: block;
   }
 }
-/** Tablet **/
-/** Tablet (landscape) **/
+/* Tablet view */
+@media only screen and (min-width: 431px) and (max-width: 820px) {
+  #nav-links {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+/* Tablet landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  #nav-links {
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-bottom: 16px;
+}
