add main hero img

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,20 @@ nav a {
 }
 /** Tablet **/
 /** Tablet (landscape) **/
+.baseline {
+  width: 100%;
+  height: 100vh;
+  background-image: url(assets/Default-Theme.jpg);
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+}
+
+.mainContent {
+  width: 100%;
+  height: 40vh;
+  background-image: url(../assets/nature-quotes-landscape-1648265648.avif);
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+}
