--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,66 @@
     background-position: center;
     background-repeat: none;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .search {
+        width: 40%;
+        height: 15%;
+        background-color: rgba(0, 0, 0, 0.552);
+        display: flex;
+        align-items: center;
+        padding: 10px;
+
+        p {
+            color: white;
+            font-size: 26px;
+            margin-top: 15px;
+        }
+    }
+}
+
+.popular {
+    width: 100%;
+    height: 50vh;
+    // background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .boxes {
+        width: 80%;
+        // background-color: rgba(58, 43, 226, 0.389);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .box1, .box2, .box3 {
+        border: solid 1px black;
+        position: relative;
+        width: 300px;
+        height: 300px;
+        // background-color: aquamarine;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        p {
+            position: absolute;
+            color: white;
+            margin-top: 10px;
+        }
+
+        img {
+            width: 100%;
+            height: 50%;
+        }
+
+        .button {
+            width: 150px;
+            margin-top: 80px;
+            border: solid black 1px;
+            padding: 10px 30px;
+        }
+    }
 }
