about page pushed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 nav {
   height: 50px;
-  background-color: #000;
+  background-color: #073b3a;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -66,13 +66,42 @@ nav a {
     justify-content: space-evenly;
   }
 }
-.baseline {
+.about-banner {
   width: 100%;
-  height: 100vh;
-  background-image: url(assets/Default-Theme.jpg);
+  height: 300px;
+  background-image: url(../assets/about-banner.jpg);
   background-position: center;
   background-repeat: none;
   background-size: cover;
+}
+.about-banner .banner-header {
+  padding-top: 100px;
+  text-align: center;
+  color: white;
+}
+
+.text-content-box {
+  display: flex;
+  width: 100%;
+  height: 600px;
+  background-color: #ddb771;
+}
+.text-content-box .content-one {
+  width: 50%;
+  height: 300px;
+  margin: 10px;
+}
+.text-content-box .content-two {
+  width: 50%;
+  height: 300px;
+  margin: 10px;
+}
+.text-content-box .content-h2-headers {
+  color: white;
+}
+.text-content-box .content-p-text {
+  color: black;
+  font-size: 18px;
 }
 
 .mainContent {
