--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,8 +1,47 @@
-.baseline {
-    width: 100%;
-    height: 100vh;
-    background-image: url(assets/Default-Theme.jpg);
-    background-position: center;
-    background-repeat: none;
-    background-size: cover;
+.about-banner {
+  width: 100%;
+  height: 300px;
+  background-image: url(../assets/about-banner.jpg);
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+
+  .banner-header {
+    // background-color: blue;
+    padding-top: 100px;
+    text-align: center;
+    color: white;
+  }
+}
+
+.text-content-box {
+  //   margin-top: 50px;
+  display: flex;
+  width: 100%;
+  height: 600px;
+  background-color: #ddb771;
+
+  .content-one {
+    width: 50%;
+    height: 300px;
+    // background-color: grey;
+    // border: 5px solid red;
+    margin: 10px;
+  }
+
+  .content-two {
+    width: 50%;
+    height: 300px;
+    // background-color: purple;
+    margin: 10px;
+    // border: 5px solid red;
+  }
+
+  .content-h2-headers {
+    color: white;
+  }
+  .content-p-text {
+    color: black;
+    font-size: 18px;
+  }
 }
