--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,9 @@ nav a {
 .about-banner {
   width: 100%;
   height: 300px;
-  background-image: url(../assets/about-banner.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/about-banner.jpg);
   background-position: center;
-  background-repeat: none;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 .about-banner .banner-header {
@@ -84,20 +84,21 @@ nav a {
   display: flex;
   width: 100%;
   height: 600px;
-  background-color: #ddb771;
 }
 .text-content-box .content-one {
   width: 50%;
   height: 300px;
+  border: 1px solid black;
   margin: 10px;
 }
 .text-content-box .content-two {
   width: 50%;
   height: 300px;
   margin: 10px;
+  border: 1px solid black;
 }
 .text-content-box .content-h2-headers {
-  color: white;
+  color: black;
 }
 .text-content-box .content-p-text {
   color: black;
