--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,9 +1,10 @@
 .about-banner {
   width: 100%;
   height: 300px;
-  background-image: url(../assets/about-banner.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../assets/about-banner.jpg);
   background-position: center;
-  background-repeat: none;
+  background-repeat: no-repeat;
   background-size: cover;
 
   .banner-header {
@@ -19,13 +20,12 @@
   display: flex;
   width: 100%;
   height: 600px;
-  background-color: #ddb771;
 
   .content-one {
     width: 50%;
     height: 300px;
     // background-color: grey;
-    // border: 5px solid red;
+    border: 1px solid black;
     margin: 10px;
   }
 
@@ -34,11 +34,11 @@
     height: 300px;
     // background-color: purple;
     margin: 10px;
-    // border: 5px solid red;
+    border: 1px solid black;
   }
 
   .content-h2-headers {
-    color: white;
+    color: black;
   }
   .content-p-text {
     color: black;
