--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 nav {
   height: 50px;
-  background-color: #000;
+  background-color: #073b3a;
   display: flex;
   align-items: center;
   justify-content: space-between;
