--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -5,7 +5,6 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 0 10px;
-  text-align: center;
   position: relative;
 }
 
@@ -16,23 +15,24 @@ nav a {
 
 #menu-icon {
   cursor: pointer;
+  color: #fff;
 }
 
 #menu-toggle {
-  display: none;
+  display: none; /* Hidden checkbox */
 }
 
 #nav-links {
-  display: flex;
+  display: flex; /* Default to flex for larger screens */
   gap: 15px;
 }
 
 /* Mobile view */
 @media only screen and (max-width: 430px) {
   #nav-links {
-    display: none;
+    display: none; /* Hidden by default */
     flex-direction: column;
-    background-color: #000;
+    background-color: #073b3a; /* Change background for dropdown */
     width: 100%;
     text-align: center;
     position: absolute;
@@ -41,7 +41,7 @@ nav a {
   }
 
   #menu-toggle:checked + #menu-icon + #nav-links {
-    display: block;
+    display: flex; /* Use flex to display dropdown */
   }
 
   nav a {
@@ -51,7 +51,6 @@ nav a {
 
   #menu-icon {
     font-size: 32px;
-    color: white;
     display: block;
   }
 }
@@ -59,7 +58,7 @@ nav a {
 /* Tablet view */
 @media only screen and (min-width: 431px) and (max-width: 820px) {
   #nav-links {
-    display: flex;
+    display: flex; /* Show links inline */
     justify-content: space-around;
   }
 }
