--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,16 @@ h6,
 p {
   margin-bottom: 16px;
 }
+
+.insert {
+  width: 100%;
+  height: 100vh;
+  background-color: beige;
+  background-image: url(assets/Google-Flights-search-1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.insert img {
+  width: 100%;
+}
