flights page created

--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -33,3 +33,10 @@ button {
 button:hover {
   background-color: #05605b;
 }
+
+.bottom-wrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: lightgrey;
+}
