--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,7 @@ button:hover {
 .banner-header-flights {
   width: 100%;
   height: 300px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/nature-quotes-landscape-1648265648.avif);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/plane.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
