--- a/scss/flights.scss
+++ b/scss/flights.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 300px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url(../assets/nature-quotes-landscape-1648265648.avif);
+    url(../assets/plane.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
